--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -26,5 +26,8 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "f": "^1.4.0"
+  }
 }
